--- a/tex/index.tex
+++ b/tex/index.tex
@@ -12,20 +12,23 @@
 \usepackage[margin=0.7in]{geometry}
 \usepackage{hyperref}
 \usepackage{datetime}
-\newdate{date}{11}{11}{2024}
+\newdate{date}{11}{12}{2024}
 \begin{document}
 	\title{index}
-	\date{\displaydate{date}}
-	\maketitle
-	\section{about me}
-	Hello! My name is Jadon. I'm an undergraduate engineering student at the University of Cambridge. This website is for documenting stuff I'm making, and writing about whatever topic interests me.
-	\section{contact and links}
-	Email: my initials, followed by the digits two-six-seven-five, at cam.ac.uk\\
-	LinkedIn: \href{https://www.linkedin.com/in/jadonmensah/}{linkedin.com/in/jadonmensah/}\\
-	X/Twitter: \href{https://x.com/kekuleanknot}{Jadon Mensah (@kekuleanknot)} 
-	\section{postscript}
-	The source files for this website are available on \href{https://github.com/jadonmensah/jadonm.com/}{my GitHub}.
-	\section{}
-	\copyright{} Jadon Mensah
-	
+		\date{\displaydate{date}}
+		\maketitle
+		\section{about me}
+		Hello! My name is Jadon. I'm an undergraduate engineering student at the University of Cambridge. This website is for documenting stuff I've made, and writing about whatever topic interests me.
+		
+		\section{updates}
+		11/12/24: \href{https://statpack.jadonm.com/}{statpack.jadonm.com} now hosts my A-Level CS project. It's a statistics calculator/spreadsheet web app.
+		
+		\section{contact and links}
+		Email: my initials, followed by the digits two-six-seven-five, at cam.ac.uk\\
+		LinkedIn: \href{https://www.linkedin.com/in/jadonmensah/}{linkedin.com/in/jadonmensah/}\\
+		X/Twitter: \href{https://x.com/kekuleanknot}{Jadon Mensah (@kekuleanknot)} 
+		\section{postscript}
+		The source files for this website are available on \href{https://github.com/jadonmensah/jadonm.com/}{my GitHub}.
+		\section{}
+		\copyright{} Jadon Mensah
 \end{document}
